[signal] Switch back to pure java 17 codebase
Signed-off-by: Gwendal Roulleau <gwendal.roulleau@gmail.com>